--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,10 +1,8 @@
 name: Release GDG on Tag
 on:
   push:
-#   branches: 
-#     - master
-    tags:
-      - v*
+    branches: 
+      - master
 
 jobs:
   goreleaser:
