--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -17,12 +17,7 @@ jobs:
         uses: actions/setup-go@v5
         with:
           go-version: '1.22.2' 
-      - name: Log in to Docker Hub
-        uses: docker/login-action@v2
-        with:
-          username: ${{ secrets.DOCKER_USERNAME }}
-          password: ${{ secrets.GITHUB_TOKEN }}
-          registry: ghcr.io
+      
       - name: Run GoReleaser
         uses: goreleaser/goreleaser-action@v3
         with:
@@ -32,3 +27,11 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           HOMEBREW_TOKEN: ${{ secrets.HOMEBREW_TOKEN }}
+      - uses: "marvinpinto/action-automatic-releases@latest"
+        with:
+          repo_token: "${{ secrets.GITHUB_TOKEN }}"
+          automatic_release_tag: "latest"
+          prerelease: true
+          title: "Development Build ${{ steps.package-version.outputs.current-version}}-${{ github.run_number }}"
+          files: |
+            dist/*
